k8s/infrastructure/minio/minio-deployment.yaml
#...
#volumeMounts:
#  - name: data
#    mountPath: /data
#volumes:
#  - name: data
#    hostPath:
#      path: /storage/minio
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  labels:
    app: minio
spec:
  clusterIP: None
  ports:
    - name: minio
      port: 9000
    - name: console
      port: 9001
  selector:
    app: minio
---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio
spec:
  serviceName: minio
  podManagementPolicy: Parallel
  updateStrategy:
    type: RollingUpdate
  replicas: 4
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      nodeSelector:
        minio_role: distributed
      containers:
        - name: minio
          image: minio/minio:RELEASE.2022-01-08T03-11-54Z
          imagePullPolicy: IfNotPresent
          args:
            - server
            - http://minio-{0...3}.minio.minio.svc.cluster.local/data
            - "--console-address=:9001"
          ports:
            - name: api
              containerPort: 9000
              hostPort: 9000
              protocol: TCP
            - name: console
              containerPort: 9001
              hostPort: 9001
              protocol: TCP
          resources:
            limits:
              cpu: 2000m
              memory: 2Gi
            requests:
              cpu: 1000m
              memory: 1Gi
          livenessProbe:
            exec:
              command: ["curl", "-f", "http://localhost:9000/minio/health/live"]
            initialDelaySeconds: 3
            periodSeconds: 3
            timeoutSeconds: 3
          readinessProbe:
            exec:
              command: ["curl", "-f", "http://localhost:9000/minio/health/live"]
            initialDelaySeconds: 3
            periodSeconds: 2
            timeoutSeconds: 1
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          hostPath:
            path: /storage/minio
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: minio-router
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`minio.idocker.io`)
      kind: Rule
      services:
        - name: minio
          port: 9000
    - match: Host(`console.minio.idocker.io`)
      kind: Rule
      services:
        - name: minio
          port: 9001
